tests/config_munging_underscores2/config_munging_underscores2.exp
Error ---------------------------------------------------------------------------------------------------- chain.js:19:1

Cannot extend `A` [1] with `B` because string [2] is incompatible with number [3] in property `_property1`.

   chain.js:19:1
       v------------------
   19| class B extends A {
   20|   _property1: string;
   21|   static _sProperty: string;
   22|
   23|   constructor() {
   24|     super();
   25|     this._property1 = "another string";
   26|   }
   27|   _method1(): string {
   28|     return "yet another string";
   29|   }
   30|   static _sMethod(): number {
   31|     return 23;
   32|   }
   33| }
       ^

References:
   chain.js:19:17
   19| class B extends A {
                       ^ [1]
   chain.js:20:15
   20|   _property1: string;
                     ^^^^^^ [2]
   chain.js:4:15
    4|   _property1: number;
                     ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- chain.js:19:1

Cannot extend `A` [1] with `B` because string [2] is incompatible with number [3] in property `_sProperty`.

   chain.js:19:1
       v------------------
   19| class B extends A {
   20|   _property1: string;
   21|   static _sProperty: string;
   22|
   23|   constructor() {
   24|     super();
   25|     this._property1 = "another string";
   26|   }
   27|   _method1(): string {
   28|     return "yet another string";
   29|   }
   30|   static _sMethod(): number {
   31|     return 23;
   32|   }
   33| }
       ^

References:
   chain.js:19:17
   19| class B extends A {
                       ^ [1]
   chain.js:21:22
   21|   static _sProperty: string;
                            ^^^^^^ [2]
   chain.js:5:22
    5|   static _sProperty: number;
                            ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- chain.js:19:1

Cannot extend `A` [1] with `B` because string [2] is incompatible with number [3] in the return value of property
`_method1`.

   chain.js:19:1
       v------------------
   19| class B extends A {
   20|   _property1: string;
   21|   static _sProperty: string;
   22|
   23|   constructor() {
   24|     super();
   25|     this._property1 = "another string";
   26|   }
   27|   _method1(): string {
   28|     return "yet another string";
   29|   }
   30|   static _sMethod(): number {
   31|     return 23;
   32|   }
   33| }
       ^

References:
   chain.js:19:17
   19| class B extends A {
                       ^ [1]
   chain.js:27:15
   27|   _method1(): string {
                     ^^^^^^ [2]
   chain.js:10:15
   10|   _method1(): number {
                     ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- chain.js:19:1

Cannot extend `A` [1] with `B` because number [2] is incompatible with string [3] in the return value of property
`_sMethod`.

   chain.js:19:1
       v------------------
   19| class B extends A {
   20|   _property1: string;
   21|   static _sProperty: string;
   22|
   23|   constructor() {
   24|     super();
   25|     this._property1 = "another string";
   26|   }
   27|   _method1(): string {
   28|     return "yet another string";
   29|   }
   30|   static _sMethod(): number {
   31|     return 23;
   32|   }
   33| }
       ^

References:
   chain.js:19:17
   19| class B extends A {
                       ^ [1]
   chain.js:30:22
   30|   static _sMethod(): number {
                            ^^^^^^ [2]
   chain.js:13:22
   13|   static _sMethod(): string {
                            ^^^^^^ [3]



Found 4 errors
